# cascade-env

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: STATUS.md  baselines.md  commercial.md  design-cascade.md  quickstart.md  windows.md
docs/artifacts/: baseline-scripted-t1-t5.json  baseline-scripted-t1-t5.md
examples/: llm_tool_loop.py  llm_tool_loop_stub.py  random_rollout.py  remote_client.py  scripted_solve.py
packs/community/: pack.yaml
packs/community/tasks/: t1_worker_retry_storm.yaml  t2_pagination_bug.yaml  t3_worker_disabled.yaml  t4_bad_product_prices.yaml  t5_discount_feature.yaml  t6_checkout_cascade.yaml  t7_security_fulfill_cascade.yaml  t8_merch_catalog_cascade.yaml
scenarios/shopstack/: docker-compose.debug.yml  docker-compose.yml  image-pins.env
scenarios/shopstack/services/api/: Dockerfile
scenarios/shopstack/services/worker/: Dockerfile
scenarios/shopstack/tests/public/: test_golden.py
scenarios/shopstack/workspace_template/app/: __init__.py  db.py  models.py  (+1 more)
scripts/: eval_baselines.py  pull_images.py  pull_images.sh  scaffold_holdout_pack.py
src/cascade_env/: __init__.py  cli.py  config.py  env.py  episode.py  metrics.py  registry.py  reward.py  trajectory.py  types.py
src/cascade_env/agents/: __init__.py  eval.py  llm_agent.py  llm_client.py  scripted.py  tools_schema.py
src/cascade_env/runtime/: __init__.py  base.py  compose.py  local.py
src/cascade_env/server/: __init__.py  app.py  auth.py  schemas.py  session.py
src/cascade_env/tasks/: __init__.py  loader.py  mutators.py  schemas.py
src/cascade_env/tools/: __init__.py  files.py  shell.py
src/cascade_env/verifiers/: __init__.py  orchestrator.py
tests/: test_compose_runtime.py  test_env_integration.py  test_l3_and_holdout.py  test_llm_agent.py  test_metrics.py  test_mutators.py  test_server.py  test_types_and_loader.py
(+7 files in other folders)
