[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cascade-env"
version = "0.1.0"
description = "Cascade: production multi-service RL environment for frontier agent training"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Cascade" }]
keywords = ["reinforcement-learning", "agents", "gymnasium", "docker", "sre"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "gymnasium>=0.29.0",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "structlog>=24.1",
  "tenacity>=8.2",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1; platform_system != 'Windows' or python_version < '0'",
  "psycopg[binary]>=3.1",
  "redis>=5.0",
  "docker>=7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-timeout>=2.2",
  "ruff>=0.3",
]

[project.scripts]
cascade = "cascade_env.cli:main"

[project.entry-points."gymnasium.envs"]
Cascade-v0 = "cascade_env.registry:register_cascade_v0"

[tool.hatch.build.targets.sdist]
include = [
  "src/cascade_env",
  "scenarios",
  "packs",
  "examples",
  "docs",
  "scripts",
  "README.md",
  "LICENSE",
]

[tool.hatch.build.targets.wheel.force-include]
"scenarios" = "cascade_env/_data/scenarios"
"packs" = "cascade_env/_data/packs"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
markers = [
  "docker: tests that require a running Docker daemon",
  "slow: longer integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
